# py-cli-builder

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_cli_builder/: __init__.py
tests/: test_import.py
