[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-cli-builder"
version = "0.1.5"
description = "Decorator-based CLI framework with rich output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
dependencies = ["rich>=13.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-cli-builder#readme"
Repository = "https://github.com/philiprehberger/py-cli-builder"
Issues = "https://github.com/philiprehberger/py-cli-builder/issues"
Changelog = "https://github.com/philiprehberger/py-cli-builder/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_cli_builder"]
