[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-cli-builder"
version = "0.1.9"
description = "Decorator-based CLI framework with rich output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["cli", "command-line", "argument-parser", "terminal", "console"]
dependencies = ["rich>=13.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-cli-builder#readme"
Repository = "https://github.com/philiprehberger/py-cli-builder"
Issues = "https://github.com/philiprehberger/py-cli-builder/issues"
Changelog = "https://github.com/philiprehberger/py-cli-builder/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_cli_builder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
